--- a/Random Quote Generator/index.html
+++ b/Random Quote Generator/index.html
@@ -5,6 +5,9 @@
 <title>Random Quote Generator</title>
 <script src = "script.js"></script>
 <link rel = "stylesheet" href = "style.css">
+<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Pacifico'>
+<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+
 </head>
 <body>
 <div class = "container" id = "cont" >
